objects/copado__Application_Feature__c.object
<CustomObject>
    <description>Copado&apos;s Feature object enables you to manage Features related to User Stories &amp; Applications. Features are made up of multiple User Stories.</description>
    <fields>
        <fullName>Business_Epic__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Business Epic</label>
        <referenceTo>copado__Epic__c</referenceTo>
        <relationshipLabel>Features (Business Epic)</relationshipLabel>
        <relationshipName>Features</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Business_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Business Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Features</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Estimated_Date_of_Delivery__c</fullName>
        <label>Estimated Date of Delivery</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Estimated_Release__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Estimated Release</label>
        <referenceTo>copado__Release__c</referenceTo>
        <relationshipLabel>Features</relationshipLabel>
        <relationshipName>Features</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Parent_Feature__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Feature</label>
        <referenceTo>copado__Application_Feature__c</referenceTo>
        <relationshipLabel>Child Features</relationshipLabel>
        <relationshipName>Child_Features</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Rejected_Reason__c</fullName>
        <label>Rejected Reason</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Time_Spent_Hours__c</fullName>
        <description>Sum of all related User Stories &quot;Time Spent (hours)&quot;.</description>
        <label>Time Spent (hours)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>copado__Application__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Application</label>
        <referenceTo>copado__Application__c</referenceTo>
        <relationshipLabel>Features</relationshipLabel>
        <relationshipName>ApplicationFeatures</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>copado__Architect__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Architect</label>
        <referenceTo>User</referenceTo>
        <relationshipName>FeatureArchitects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>copado__Complexity__c</fullName>
        <label>Complexity</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>copado__Description__c</fullName>
        <label>Description</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>copado__Epic__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Epic</label>
        <referenceTo>copado__Epic__c</referenceTo>
        <relationshipLabel>Features</relationshipLabel>
        <relationshipName>ApplicaitonFeatures</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>copado__Estimated_Value__c</fullName>
        <label>Estimated Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>copado__Priority__c</fullName>
        <label>Priority</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>copado__Product_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>FeatureOwners</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>copado__Status__c</fullName>
        <inlineHelpText>Status of Feature</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Requested</fullName>
                </value>
                <value>
                    <fullName>Under Review</fullName>
                </value>
                <value>
                    <fullName>Ready for Refinement</fullName>
                </value>
                <value>
                    <fullName>Refinement in Progress</fullName>
                </value>
                <value>
                    <fullName>Accepted</fullName>
                </value>
                <value>
                    <fullName>Coming Soon</fullName>
                </value>
                <value>
                    <fullName>Delivered</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>copado__Technical_Assumptions__c</fullName>
        <inlineHelpText>Technical Assumptions or Design Considerations for Feature</inlineHelpText>
        <label>Technical Assumptions</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>copado__Users__c</fullName>
        <label># Users</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>copado__Value_Type__c</fullName>
        <inlineHelpText>Business Value of Feature</inlineHelpText>
        <label>Value Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Time Savings</fullName>
                </value>
                <value>
                    <fullName>New Revenue</fullName>
                </value>
                <value>
                    <fullName>User Adoption</fullName>
                </value>
                <value>
                    <fullName>User Experience</fullName>
                </value>
                <value>
                    <fullName>Performance</fullName>
                </value>
                <value>
                    <fullName>Stability</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Feature</label>
    <listViews>
        <fullName>Agile_Planning_Features</fullName>
        <booleanFilter>(1 OR 2 OR 3 OR 4 OR 5 OR 6 OR 7 OR 8 OR 9) AND 10</booleanFilter>
        <columns>NAME</columns>
        <columns>copado__Priority__c</columns>
        <columns>copado__Status__c</columns>
        <columns>Estimated_Release__c</columns>
        <columns>copado__Application__c</columns>
        <columns>copado__Value_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>copado__Application__c</field>
            <operation>contains</operation>
            <value>Agile</value>
        </filters>
        <filters>
            <field>copado__Application__c</field>
            <operation>contains</operation>
            <value>Sprint</value>
        </filters>
        <filters>
            <field>copado__Application__c</field>
            <operation>contains</operation>
            <value>Kanban</value>
        </filters>
        <filters>
            <field>copado__Application__c</field>
            <operation>contains</operation>
            <value>Plan</value>
        </filters>
        <filters>
            <field>copado__Application__c</field>
            <operation>contains</operation>
            <value>Portfolio</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>Plan</value>
        </filters>
        <filters>
            <field>copado__Application__c</field>
            <operation>contains</operation>
            <value>Work Manager</value>
        </filters>
        <filters>
            <field>copado__Application__c</field>
            <operation>contains</operation>
            <value>Management</value>
        </filters>
        <filters>
            <field>copado__Application__c</field>
            <operation>contains</operation>
            <value>Dependen</value>
        </filters>
        <filters>
            <field>copado__Product_Owner__c</field>
            <operation>contains</operation>
            <value>Soraya</value>
        </filters>
        <label>Copado Plan - Features</label>
    </listViews>
    <listViews>
        <fullName>Alpha_Features</fullName>
        <columns>NAME</columns>
        <columns>copado__Epic__c</columns>
        <columns>copado__Priority__c</columns>
        <columns>copado__Value_Type__c</columns>
        <columns>copado__Status__c</columns>
        <columns>copado__Complexity__c</columns>
        <columns>copado__Application__c</columns>
        <columns>copado__Product_Owner__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>copado__Application__c</field>
            <operation>equals</operation>
            <value>Data Deploy</value>
        </filters>
        <label>Alpha - Features</label>
    </listViews>
    <listViews>
        <fullName>Classic</fullName>
        <columns>NAME</columns>
        <columns>copado__Application__c</columns>
        <columns>copado__Epic__c</columns>
        <columns>copado__Priority__c</columns>
        <columns>copado__Complexity__c</columns>
        <columns>copado__Status__c</columns>
        <columns>copado__Architect__c</columns>
        <columns>copado__Product_Owner__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>copado__Application__c</field>
            <operation>contains</operation>
            <value>classic</value>
        </filters>
        <filters>
            <field>copado__Status__c</field>
            <operation>notEqual</operation>
            <value>Delivered,Rejected</value>
        </filters>
        <label>Classic</label>
    </listViews>
    <listViews>
        <fullName>Compliance_Hub</fullName>
        <columns>NAME</columns>
        <columns>copado__Architect__c</columns>
        <columns>copado__Application__c</columns>
        <columns>copado__Complexity__c</columns>
        <columns>copado__Status__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>copado__Product_Owner__c</columns>
        <columns>copado__Estimated_Value__c</columns>
        <columns>Estimated_Release__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>copado__Application__c</field>
            <operation>equals</operation>
            <value>Copado Compliance Hub</value>
        </filters>
        <label>Copado Compliance Hub</label>
    </listViews>
    <listViews>
        <fullName>Copado_ATF_Roadmap</fullName>
        <booleanFilter>1 AND (2 OR 3)</booleanFilter>
        <columns>NAME</columns>
        <columns>copado__Priority__c</columns>
        <columns>copado__Application__c</columns>
        <columns>copado__Status__c</columns>
        <columns>copado__Value_Type__c</columns>
        <columns>copado__Estimated_Value__c</columns>
        <columns>Estimated_Release__c</columns>
        <columns>copado__Complexity__c</columns>
        <columns>copado__Architect__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>copado__Product_Owner__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>copado__Product_Owner__c</field>
            <operation>equals</operation>
            <value>Shereen Khosravi</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>Summer</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>Roadmap</value>
        </filters>
        <label>Copado ATF_Roadmap</label>
    </listViews>
    <listViews>
        <fullName>Copado_GovCloud</fullName>
        <columns>NAME</columns>
        <columns>copado__Architect__c</columns>
        <columns>copado__Application__c</columns>
        <columns>copado__Complexity__c</columns>
        <columns>copado__Status__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>copado__Product_Owner__c</columns>
        <columns>copado__Estimated_Value__c</columns>
        <columns>Estimated_Release__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>copado__Application__c</field>
            <operation>equals</operation>
            <value>Copado GovCloud</value>
        </filters>
        <label>Copado GovCloud</label>
    </listViews>
    <listViews>
        <fullName>Copado_Package_Validator</fullName>
        <columns>NAME</columns>
        <columns>copado__Architect__c</columns>
        <columns>copado__Application__c</columns>
        <columns>copado__Complexity__c</columns>
        <columns>copado__Status__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>copado__Product_Owner__c</columns>
        <columns>copado__Estimated_Value__c</columns>
        <columns>Estimated_Release__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>copado__Application__c</field>
            <operation>equals</operation>
            <value>Copado Package Validator</value>
        </filters>
        <label>Copado Package Validator</label>
    </listViews>
    <listViews>
        <fullName>Copado_Plan_Features_Summer_22</fullName>
        <booleanFilter>1 AND 2 AND (3 OR 4) AND 5</booleanFilter>
        <columns>NAME</columns>
        <columns>copado__Epic__c</columns>
        <columns>Business_Epic__c</columns>
        <columns>copado__Priority__c</columns>
        <columns>copado__Complexity__c</columns>
        <columns>copado__Estimated_Value__c</columns>
        <columns>copado__Value_Type__c</columns>
        <columns>Estimated_Release__c</columns>
        <columns>copado__Status__c</columns>
        <columns>copado__Application__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>copado__Product_Owner__c</field>
            <operation>contains</operation>
            <value>Soraya</value>
        </filters>
        <filters>
            <field>copado__Application__c</field>
            <operation>contains</operation>
            <value>Plan</value>
        </filters>
        <filters>
            <field>Estimated_Release__c</field>
            <operation>contains</operation>
            <value>Summer</value>
        </filters>
        <filters>
            <field>Estimated_Release__c</field>
            <operation>contains</operation>
            <value>v19.</value>
        </filters>
        <filters>
            <field>copado__Priority__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>Copado Plan v20 Summer/Fall 22 by Prio</label>
    </listViews>
    <listViews>
        <fullName>Copado_Plan_Features_Winter_Spring_22</fullName>
        <booleanFilter>(1 OR 2) AND 3</booleanFilter>
        <columns>NAME</columns>
        <columns>copado__Epic__c</columns>
        <columns>copado__Application__c</columns>
        <columns>copado__Priority__c</columns>
        <columns>copado__Complexity__c</columns>
        <columns>copado__Status__c</columns>
        <columns>Estimated_Release__c</columns>
        <columns>copado__Value_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>Plan</value>
        </filters>
        <filters>
            <field>copado__Application__c</field>
            <operation>contains</operation>
            <value>Plan</value>
        </filters>
        <filters>
            <field>Estimated_Release__c</field>
            <operation>contains</operation>
            <value>Spring &apos;22</value>
        </filters>
        <label>Copado Plan v19 Winter/Spring 22</label>
    </listViews>
    <listViews>
        <fullName>Copado_Version_Control</fullName>
        <columns>NAME</columns>
        <columns>copado__Architect__c</columns>
        <columns>copado__Application__c</columns>
        <columns>copado__Complexity__c</columns>
        <columns>copado__Status__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>copado__Product_Owner__c</columns>
        <columns>copado__Estimated_Value__c</columns>
        <columns>Estimated_Release__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>copado__Application__c</field>
            <operation>equals</operation>
            <value>Copado Version Control</value>
        </filters>
        <label>Copado Version Control</label>
    </listViews>
    <listViews>
        <fullName>DevOps_Exchange_Features</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>copado__Application__c</field>
            <operation>equals</operation>
            <value>DevOps Exchange</value>
        </filters>
        <label>DevOps Exchange Features</label>
    </listViews>
    <listViews>
        <fullName>FY23_Roadmap_DX_Fall_Release</fullName>
        <columns>copado__Priority__c</columns>
        <columns>NAME</columns>
        <columns>copado__Status__c</columns>
        <columns>Estimated_Release__c</columns>
        <columns>copado__Estimated_Value__c</columns>
        <columns>copado__Complexity__c</columns>
        <columns>copado__Product_Owner__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Business_Epic__c</field>
            <operation>equals</operation>
            <value>E0001104,E0001103,E0001118</value>
        </filters>
        <filters>
            <field>copado__Status__c</field>
            <operation>notEqual</operation>
            <value>Rejected</value>
        </filters>
        <label>FY23 Roadmap - DX (Fall Release)</label>
    </listViews>
    <listViews>
        <fullName>FY23_Roadmap_Multicloud_Fall_Release</fullName>
        <columns>copado__Priority__c</columns>
        <columns>NAME</columns>
        <columns>copado__Status__c</columns>
        <columns>Estimated_Release__c</columns>
        <columns>copado__Estimated_Value__c</columns>
        <columns>copado__Complexity__c</columns>
        <columns>copado__Product_Owner__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Business_Epic__c</field>
            <operation>equals</operation>
            <value>E0001105,E0001115,E0001109,E0001107,E0001108,E0001110</value>
        </filters>
        <label>FY23 Roadmap - Multicloud (Fall Release)</label>
    </listViews>
    <listViews>
        <fullName>FY23_Roadmap_Multicloud_Sprint_Release</fullName>
        <columns>copado__Priority__c</columns>
        <columns>NAME</columns>
        <columns>copado__Status__c</columns>
        <columns>Estimated_Release__c</columns>
        <columns>copado__Estimated_Value__c</columns>
        <columns>copado__Complexity__c</columns>
        <columns>copado__Product_Owner__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Business_Epic__c</field>
            <operation>equals</operation>
            <value>E0001111,E0001112,E0001113</value>
        </filters>
        <label>FY23 Roadmap - Multicloud Sprint Release</label>
    </listViews>
    <listViews>
        <fullName>Feature_Requests_From_Services</fullName>
        <columns>NAME</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>copado__Status__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATEDBY_USER</field>
            <operation>equals</operation>
            <value>Joe Imperato,Andrew Durrans,Jen Nelson,Matt Barclay,James Leblanc,Kevin Blessum,Caity Stark,Ashley Dodge,Ariel Ridley,Rohit Boggarapu,Dan Kellogg,Katie Belton,andrew davis</value>
        </filters>
        <filters>
            <field>copado__Status__c</field>
            <operation>notEqual</operation>
            <value>Under Review,Ready for Refinement,Refinement in Progress,Accepted,Coming Soon,Delivered,Rejected</value>
        </filters>
        <label>Feature Requests From Services</label>
    </listViews>
    <nameField>
        <label>Feature Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Features</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>